--- a/internal/views/layouts/main.templ
+++ b/internal/views/layouts/main.templ
@@ -10,7 +10,7 @@ templ Base() {
 			<link href="static/css/styles.css" rel="stylesheet"/>
 			<script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
 		</head>
-		<body class="antialiased">
+		<body class="antialiased w-96 py-10 m-auto">
 			{ children... }
 		</body>
 	</html>
