--- a/internal/views/task/index.templ
+++ b/internal/views/task/index.templ
@@ -7,9 +7,58 @@ import (
 
 templ Index(tasks []*types.Task) {
 	@layouts.Base() {
-		for _, task := range tasks {
-			<p class="underline text-lime-500">{ task.Title }</p>
-			<p>{ task.Description }</p>
-		}
+		<h1 class="text-center w-full text-2xl mb-4 font-semibold">TODO LIST</h1>
+		@TaskForm()
+		@TasksList(tasks)
 	}
+}
+
+templ TasksList(tasks []*types.Task) {
+	<ul id="tasks" role="list" class="divide-y divide-gray-100">
+		for _, task := range tasks {
+			<li class="flex justify-between py-3">
+				<div class="flex min-w-0 gap-4">
+					<p class="text-sm font-semibold leading-6 text-gray-900">{ task.Title }</p>
+				</div>
+				<div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+					@statusBadge(task)
+					<p class="mt-1 text-xs leading-5 text-gray-500">{ task.CreatedAt.Local().Format("02 Jan 06 15:04") }</p>
+				</div>
+			</li>
+		}
+	</ul>
+}
+
+templ TaskForm() {
+	<form
+		class="grid grid-cols-6 gap-2 mb-2"
+		hx-post="/tasks"
+		hx-target="#tasks"
+		hx-on::after-request="this.reset()"
+	>
+		<input
+			id="title"
+			name="title"
+			type="text"
+			required
+			class="col-span-5 block w-full px-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+		/>
+		<button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">+</button>
+	</form>
+}
+
+templ statusBadge(task *types.Task) {
+	<span
+		class={
+			"inline-flex items-center rounded-md px-2 py-1 text-xs font-medium ring-1 ring-inset",
+			templ.KV("bg-green-50 text-green-700 ring-green-600/20", task.Completed.Bool),
+			templ.KV("bg-red-50 text-red-700 ring-red-600/20", !task.Completed.Bool),
+		}
+	>
+		if task.Completed.Bool {
+			DONE
+		} else {
+			PENDING
+		}
+	</span>
 }
