update task title

--- a/internal/views/layouts/main.templ
+++ b/internal/views/layouts/main.templ
@@ -9,6 +9,8 @@ templ Base() {
 			<title>TODO</title>
 			<link href="static/css/styles.css" rel="stylesheet"/>
 			<script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
+			<script src="//unpkg.com/alpinejs" defer></script>
 		</head>
 		<body class="antialiased w-96 py-10 m-auto">
 			{ children... }
