--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -834,6 +834,10 @@ video {
   --tw-ring-color: rgb(220 38 38 / 0.2);
 }
 
+[x-cloak] {
+  display: none
+}
+
 .placeholder\:text-gray-400::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
